<resources>
    <string name="app_name">ಪವಿತ್ರ ಕುರ್ ಆನ್</string>
    <string name="downloadPrompt_title">ಅರಬಿ ಪುಟಗಳನ್ನು ಡೌನ್ ಲೋಡ್ ಮಾಡುವಿರಾ?</string>
    <string name="downloadPrompt">ನೀವು ಈಗ ಕುರ್ ಆನಿನ ಮೂಲ ಅರಬಿ ಪುಟಗಳನ್ನು ಡೌನ್ ಲೋಡ್ ಮಾಡಬೇಕಾಗಿದೆ.
ಇಲ್ಲದಿದ್ದರೆ, ನಿಮಗೆ ಅರಬಿ ಪುಟಗಳನ್ನು ವೀಕ್ಷಿಸಲಾಗುವುದಿಲ್ಲ. ನೀವು ಈಗ ಡೌನ್ ಲೋಡ್ ಮಾಡಲು ಬಯಸುವಿರಾ?
	</string>
    <string name="downloadTabletPrompt">ನಾವು ಇತ್ತೀಚೆಗೆ ಟ್ಯಾಬ್ಲೆಟ್ ಗಾಗಿ ಸುಧಾರಿತ ಅರಬಿ ಪುಟಗಳನ್ನು ಸೇರಿಸಿದ್ದೇವೆ. ನೀವು ಈಗ ಡೌನ್ಲೋಡ್ ಮಾಡಲು ಬಯಸುವಿರಾ?</string>
    <string name="downloadImportantPrompt">ಕುರ್ ಆನಿನ ಸೂಕ್ತಿಗಳನ್ನು ಶೇರ್ ಮಾಡಲು ಒಂದು ಸಣ್ಣ ಅಪ್ಡೇಟ್  ಮಾಡಬೇಕಾಗಿದೆ. ನೀವು ಈಗ ಅಪ್ಡೇಟ್ ಮಾಡಲು ಬಯಸುವಿರಾ?</string>
    <string name="text_size">ಫಾಂಟ್ ಗಾತ್ರ(Text size)</string>
    <string name="abt_us">ಪವಿತ್ರ ಕುರ್ ಆನ್  </string>
    <string name="downloadPrompt_ok">ಹೌದು </string>
    <string name="downloadPrompt_no">ಇಲ್ಲ</string>
    <string name="downloading_title">ಡೌನ್ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ&#8230;</string>
    <string name="downloading_message">ಫೈಲ್ಗಳನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡುವವರೆಗೆ ನಿರೀಕ್ಷಿಸಿ </string>
    <string name="extracting_title">ಸಂಸ್ಕರಿಸಲಾಗುತ್ತಿದೆ&#8230;</string>
    <string name="menu_about">ಪವಿತ್ರ ಕುರ್ ಆನ್  ಬಗ್ಗೆ</string>
    <string name="menu_settings">ಸೆಟ್ಟಿಂಗ್</string>
    <string name="menu_jump_last_page">ಕೊನೆಯ ಪುಟ</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_bookmarks">ಗುರುತು(Bookmark)</string>
    <string name="menu_bookmarks_page">ಪುಟ ಗುರುತು(Bookmark)</string>
    <string name="menu_bookmarks_ayah">ಸೂಕ್ತಿ ಗುರುತು(Bookmark)</string>
    <string name="menu_sort">ವ್ಯವಸ್ಥಿತವಾಗಿ ಜೋಡಿಸು</string>
    <string name="menu_sort_date">ದಿನಾಂಕ ಆಧಾರಿತ</string>
    <string name="menu_sort_location">ಪುಟ ಆಧಾರಿತ</string>
    <string name="menu_sort_alphabetical">ವರ್ಣಮಾಲೆ ಆಧಾರಿತ</string>
    <string name="menu_translation"> ಕನ್ನಡ ಮತ್ತು ಅರಬಿ</string>
    <string name="menu_kannada">ಕನ್ನಡ ಅರ್ಥಾನುವಾದ</string>
    <string name="menu_back_to_page">ಕುರ್ ಆನ್</string>
    <string name="menu_help">ಸಹಾಯ</string>
    <string name="menu_search">ಹುಡುಕಿ</string>
    <string name="menu_get_translations">Get Translations</string>
    <string name="menu_jump">ಹೋಗಿ(Goto)</string>
    <string name="font_menu">ಅರಬಿ ಫಾಂಟ್ ಆಯ್ಕೆ</string>
    <string name="gotoPage">ಪುಟಕ್ಕೆ ಹೋಗಿ</string>
    <string name="cancel">ರದ್ದುಮಾಡಿ</string>
    <string name="developedBy">apps@scalosphere.com</string>
    <string name="copyRights">&#169; Scalosphere Computing LLP</string>
    <string name="aboutUs">ಪವಿತ್ರ ಕುರ್ ಆನ್  ಬಗ್ಗೆ</string>
      <string name="aboutUsContent">ಪವಿತ್ರ ಕುರ್ ಆನ್,ಇದು ಆಂಡ್ರಾಯ್ಡ್ ಸ್ಮಾರ್ಟ್ ಫೋನ್ ಗಳಿಗಾಗಿರುವ ಉಚಿತ ಕನ್ನಡ ಕುರ್ ಆನ್ ಆಪ್ಲಿಕೇಷನ್ ಆಗಿದೆ.ಮೂಲ ಅರಬಿ ಪುಟಗಳನ್ನು &lt;a href="http://tanzil.net">tanzil.net&lt;/a> ನಿಂದ ತೆಗೆದುಕೊಳ್ಳಲಾಗಿದೆ ಮತ್ತು ಕನ್ನಡ ಅರ್ಥಾನುವಾದವನ್ನು ಮುಹಮ್ಮದ್ ಹಂಝಾ ಪುತ್ತೂರು ರವರು ಭಾಷಾಂತರಿಸಿದ, ಉಮರ್ ಇಬ್ನ್ ಅಹ್ಮದ್ ಮದೀನಿ, ಅಹ್ಮದ್ ಎಸ್ ಎಮ್ ಮತ್ತು ಅಬೂಬಕರ್ ನಝೀರ್ ಸಲಫಿಯವರು ಪರಿಶೀಲಿಸಿದ &lt;b>\'ಪವಿತ್ರ ಕುರ್ ಆನ್, ಸಂಪೂರ್ಣ ಕನ್ನಡ ಅರ್ಥಾನುವಾದ\' (ಪ್ರಕಾಶಕರು :ಸಲಫಿ ಪಬ್ಲಿಷಿಂಗ್ ಹೌಸ್ ಮಂಗಳೂರು)&lt;/b> ದಿಂದ ತೆಗೆದುಕೊಳ್ಳಲಾಗಿದೆ.
      &lt;br/>&lt;br/>&lt;b> &lt;a href="https://m.facebook.com/QuranmatthuHadeesVchanagalu"> \'ಕುರ್ ಆನ್ ಮತ್ತು ಹದೀಸ್ ವಚನಗಳು\' ಫೇಸ್ ಬುಕ್ ಪುಟ &lt;/a> ದ ,ಕನ್ನಡ ಕುರ್ ಆನ್ ಆಪ್ಲಿಕೇಷನ್ ಮತ್ತು منهج الأنبياء ವಾಟ್ಸ್ ಆಪ್ ಗ್ರೂಪಿನ ನಿರ್ವಾಹಕರು ಮತ್ತು ಸದಸ್ಯರಿಗೆ ವಿಶೇಷವಾಗಿ ಅಲ್ಲಾಹು ಶ್ರೇಷ್ಟವಾದದ್ದನ್ನು ದಯಪಾಲಿಸಲಿ.&lt;/b> &lt;br/>
      ನಿಮ್ಮ ಪ್ರಶ್ನೆಗಳನ್ನು  apps@scalosphere.com ಗೆ ಇಮೇಲ್ ಮಾಡಬಹುದು. &lt;br/>&#169; Scalosphere Computing LLP </string>
    <string name="help_title">ಪುನರಾವರ್ತಿತ ಪ್ರಶ್ನೆಗಳು</string>
    <string name="test">&lt;sup> 3 &lt;/sup></string>
    <string name="help">
        &lt;b>How do I play audio?&lt;/b>
        &lt;br/>Open any ಕುರ್ ಆನ್ ಪುಟ.  Tap on the screen once.  At the bottom, you will notice
        a play button and some text with the name of a qari.  Click the name of the qari to
        choose a different qari.  Click play to ಡೌನ್ ಲೋಡ್  and play the ಈಗ ಇರುವ ಪುಟ or sura.
        &lt;br/>
        &lt;br/>&lt;b>How do I view the translation?&lt;/b>
        &lt;br/>Open any ಕುರ್ ಆನ್ ಪುಟ.  Tap on the screen once.  In the top, you will notice a
        globe icon (or, if you don\'t see it, you may see an icon with three square dots) - click
        this and choose translation to view the translation.
        &lt;br/>
        If you do not have any translations downloaded, it will take
        you to a screen where you can ಡೌನ್ ಲೋಡ್  translations.  Choose and ಡೌನ್ ಲೋಡ್  a translation,
        then return back and tap the globe icon again to view the translation.
        &lt;br/>
        &lt;br/>&lt;b>How do I ಬುಕ್ಮಾರ್ಕ್ a ಪುಟ?&lt;/b>
        &lt;br/>Open any ಕುರ್ ಆನ್ ಪುಟ.  Tap on the screen once.  In the top right, you will see a
        star icon.  Tap the star icon to ಬುಕ್ಮಾರ್ಕ್ it (the color will turn solid white).  Tap the star icon
        again to remove the ಬುಕ್ಮಾರ್ಕ್.
        &lt;br/>
        &lt;br/>&lt;b>How do I make the text larger?&lt;/b>
        &lt;br/>For the Arabic pages, hold your phone in landscape.  This makes the text larger.
        For translations, go to settings and choose translation size.
        &lt;br/>
        &lt;br/>&lt;b>How do I share an ayah?&lt;/b>
        &lt;br/>While on any Arabic ಪುಟ, press and hold on any ayah to get a menu where you can
        choose to ಬುಕ್ಮಾರ್ಕ್ it, tag it, share or copy the ayah to the clipboard, see the translation,
        or listen to its recitation.&lt;br/>
        &lt;br/>&lt;b>Malayalm/Tamil/Bangla/Urdu fonts don\'t work!&lt;/b>
        &lt;br/>Unfortunately, Android versions before 4.0 do not support these fonts, and there is
        little we can do to help with this.
    </string>
	<string name="search_hint" translatable="false">ಹುಡುಕಿ...</string>
	<string name="quranSearchType" translatable="false">ಸೂಕ್ತಿ ಹುಡುಕಿ...</string>
    <plurals name="search_results">
        <item quantity="one">\"%1$s\" ಒಂದು ಸೂಕ್ತಿಯಲ್ಲಿ ಸಿಕ್ಕಿತು : </item>
        <item quantity="other">\"%1$s\" ಸಿಕ್ಕಿದ ಸೂಕ್ತಿಗಳು :  %2$d</item>
    </plurals>
    <string name="found_in_sura" translatable="false">ಸಿಕ್ಕಿದ ಅಧ್ಯಾಯ</string>
    <string name="no_results" translatable="false"> \"%s\" ಯಾವ ಸೂಕ್ತಿಯಲ್ಲೂ ಸಿಕ್ಕಿಲ್ಲ</string>
    <string name="no_active_translation" translatable="false">You have no active translation set. Please set an active translation first and then search again.</string>
    <string name="translation_settings" translatable="false">Translation Settings</string>
    <string name="no_arabic_search_available" translatable="false">You have not downloaded the Arabic search pack.  Please ಡೌನ್ ಲೋಡ್  it and try your search again.</string>
    <string name="get_arabic_search_db" translatable="false">Get Arabic Search Database</string>
    <string name="no_kannada_search_available" translatable="false">You have not downloaded the Kannada search pack.  Please ಡೌನ್ ಲೋಡ್  it and try your search again.</string>
    <string name="get_kannada_search_db" translatable="false">Get Kannada Search Database</string>
    <string name="prefs_category_navigation" translatable="false">Navigation</string>
    <string name="prefs_volume_key_navigation_title" translatable="false">Volume key navigation</string>
    <string name="prefs_volume_key_navigation_summary" translatable="false">Navigate between pages using volume keys</string>
    <string name="prefs_category_reading" translatable="false">Reading Preferences</string>
    <string name="prefs_category_translation" translatable="false">Translation Preferences</string>
    <string name="prefs_category_display_settings" translatable="false">Display Settings</string>
    <string name="prefs_use_arabic_title" translatable="false">Arabic Mode</string>
    <string name="prefs_use_arabic_summary_on" translatable="false">Application will be localized to Arabic (restart required)</string>
    <string name="prefs_use_arabic_reshaper_title" translatable="false">Use Arabic Reshaper</string>
    <string name="prefs_use_arabic_reshaper_summary_on" translatable="false">If your Arabic text is backwards, uncheck this option.</string>
    <string name="prefs_use_arabic_reshaper_summary_off" translatable="false">If your Arabic text is not joined, check this option to fix it.</string>
    <string name="prefs_new_background_title" translatable="false">New background</string>
    <string name="prefs_lock_orientation_title" translatable="false">Lock screen orientation</string>
    <string name="prefs_lock_orientation_summary_on" translatable="false">ಕುರ್ ಆನ್ ಪುಟ will be in fixed orientation mode</string>
    <string name="prefs_lock_orientation_summary_off" translatable="false">Adaptive to current orientation mode</string>
    <string name="prefs_landscape_orientation_title" translatable="false">Landscape orientation</string>
    <string name="prefs_landscape_orientation_summary_on" translatable="false">Landscape orientation will be used</string>
    <string name="prefs_landscape_orientation_summary_off" translatable="false">Portrait orientation will be used</string>
    <string name="prefs_night_mode_title" translatable="false">Night mode</string>
    <string name="prefs_night_mode_summary" translatable="false">Dark background and light fonts will be used</string>
    <string name="prefs_night_mode_text_brightness_title" translatable="false">Text Brightness</string>
    <string name="prefs_night_mode_text_brightness_summary" translatable="false">Brightness of the text when night mode is active</string>
    <string name="prefs_overlay_page_info_title" translatable="false">Show ಪುಟ info (beta)</string>
    <string name="prefs_overlay_page_info_summary" translatable="false">Overlay ಪುಟ number, sura name, and juz\' number while reading</string>
    <string name="prefs_display_marker_title" translatable="false">Display marker popups</string>
    <string name="prefs_display_marker_summary" translatable="false">Display popup on reaching juz\', hizb, etc.</string>
    <string name="prefs_highlight_bookmarks_title" translatable="false">Highlight ಗುರುತು(Bookmark)</string>
    <string name="prefs_highlight_bookmarks_summary" translatable="false">Highlight ಗುರುತು(Bookmark) ayahs while reading</string>
    <string name="prefs_translation_text_title" translatable="false">Translation text size</string>
    <string name="prefs_translations" translatable="false">Translations</string>
    <string name="prefs_translations_summary">ಡೌನ್ ಲೋಡ್  and manage translations</string>
    <string name="prefs_ayah_before_translation_title">Ayah before Translation</string>
    <string name="prefs_ayah_before_translation_summary">Show ayah in Arabic above the translation</string>
    <string name="prefs_category_download">ಡೌನ್ ಲೋಡ್ Options</string>
    <string name="prefs_streaming_title">Streaming</string>
    <string name="prefs_streaming_summary">Stream audio when possible (non-gapless audio only).</string>
    <string name="prefs_download_amount_title">ಡೌನ್ ಲೋಡ್  Amount</string>
    <string name="prefs_download_amount_summary">Preferred ಡೌನ್ ಲೋಡ್  amount for non-gapless audio.</string>
    <string name="downloaded_translations">Downloaded</string>
    <string name="download_kan_db">ಕನ್ನಡ ಅರ್ಥಾನುವಾದ</string>
    <string name="download_arabic_db">النص العربي </string>
    <string name="available_translations">Available for ಡೌನ್ಲೋಡ್</string>
    <string name="remove_button">ತೆಗೆದುಹಾಕಿ</string>
    <string name="dialog_ok">ಓಕೆ</string>
    <string name="prefs_advanced_settings_title">Advanced Settings</string>
    <string name="prefs_app_location_title">ಕುರ್ ಆನ್ Data Directory</string>
    <string name="prefs_app_location_summary">Choose where to store ಕುರ್ ಆನ್ files.</string>
    <string name="prefs_sdcard_internal">Internal Storage</string>
    <string name="prefs_sdcard_external">External SD Card</string>
    <string name="prefs_sdcard_auto">Auto</string>
    <string name="prefs_app_size">Current data size is</string>
    <string name="prefs_calculating_app_size">Calculating App Size</string>
    <string name="foot_notes" translatable="false">ಟಿಪ್ಪಣಿಗಳು</string>
</resources>