<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/search"
        android:icon="@drawable/ic_ab_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/goto_translation"
        android:icon="@drawable/ic_translation"
        android:title="@string/menu_translation"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/goto_quran"
        android:icon="@drawable/ic_goto_quran"
        android:title="@string/menu_back_to_page"
        app:showAsAction="ifRoom" />


    <item android:id="@+id/goto_kannada"
        android:icon="@drawable/kannada"
        android:title="@string/menu_kannada"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/foot_notes"
        android:icon="@drawable/footnotes"
        android:title="@string/foot_notes"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/favorite_item"
          android:icon="@drawable/favorite"
          android:title="@string/menu_bookmarks"
        app:showAsAction="ifRoom" />


    <item android:id="@+id/change_text_size"
        android:icon="@drawable/font_size"
        android:title="@string/text_size"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/font_menu"
        android:title="@string/font_menu"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_date"
                android:title="@string/menu_sort_date"
                app:showAsAction="withText" />
            <item android:id="@+id/sort_location"
                android:title="@string/menu_sort_location"
                android:visible="false"
                android:enabled="false"
                app:showAsAction="withText" />
            <item android:id="@+id/sort_alphabetical"
                android:title="@string/menu_sort_alphabetical"
                android:visible="false"
                android:enabled="false"
                app:showAsAction="withText" />
        </menu>
    </item>

    <item android:id="@+id/night_mode"
        android:checkable="true"
        android:icon="@drawable/ic_brightness"
        android:title="@string/prefs_night_mode_title"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/jump"
          android:title="@string/menu_jump"
        app:showAsAction="never" />


    <item android:id="@+id/settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/menu_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/help"
          android:title="@string/menu_help"
        android:visible="false"
        app:showAsAction="never" />

</menu>